Alignment fixes

--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -165,6 +165,9 @@
 #sign-up-navbar {
   box-shadow: none;
 }
+.sign-up-navbar-center {
+  margin-right: 45%;
+}
 
 /* I18n dropdown menu */
 
