--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -35,9 +35,8 @@
   align-items: flex-end;
 }
 .grey-box {
-  width: 95%;
   padding: 8px 24px;
-  margin: 20px 24px;
+  margin: 20px 30px;
   background-color: $background-grey;
   border-radius: 2px;
   box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 0.1);
@@ -50,7 +49,6 @@
 }
 .blue-box {
   padding: 8px 24px;
-  margin: 20px 15px;
   background-color: $beige;
   border-radius: 2px;
   box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 0.1);
